# openapi/connector_spec.yaml
@@ -1822,6 +1822,55 @@ paths:
       summary: Authorise GooglePay payment
       tags:
       - Charge operations
+  /v1/frontend/charges/{chargeId}/wallets/google/worldpay:
+    post:
+      operationId: authoriseChargeGooglePayWorldpay
+      parameters:
+      - description: Charge external ID
+        example: b02b63b370fd35418ad66b0101
+        in: path
+        name: chargeId
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GooglePayAuthRequest'
+        required: true
+      responses:
+        "200":
+          description: OK
+        "202":
+          description: Accepted - payment has been submitted for authorisation and
+            awaiting response from Worldpay
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: Bad request - invalid payload or the payment has been declined
+        "402":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: Gateway error
+        "404":
+          description: Not found
+        "422":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+          description: Unprocessable Entity - Invalid payload or missing mandatory
+            attributes
+        "500":
+          description: Internal server error
+      summary: Authorise GooglePay payment for Worldpay
+      tags:
+      - Charge operations
   /v1/frontend/charges/{chargeId}/worldpay/3ds-flex/ddc:
     get:
       operationId: getWorldpay3dsFlexDdcJwt
