# src/main/java/uk/gov/pay/connector/paymentprocessor/resource/CardResource.java
@@ -111,6 +111,7 @@ public class CardResource {
         return applePayService.authorise(chargeId, applePayAuthRequest);
     }
 
+    //PP-11394 This endpoint will be removed when frontend has been pointed to the new Worldpay-specific endpoint for Google Pay
     @POST
     @Path("/v1/frontend/charges/{chargeId}/wallets/google")
     @Consumes(APPLICATION_JSON)
@@ -131,6 +132,33 @@ public class CardResource {
             }
     )
     public Response authoriseCharge(@Parameter(example = "b02b63b370fd35418ad66b0101", description = "Charge external ID")
+                                    @PathParam("chargeId") String chargeId,
+                                    @NotNull @Valid GooglePayAuthRequest googlePayAuthRequest) {
+        logger.info("Received encrypted payload for charge with id {} ", chargeId);
+        logger.info("Received wallet payment info \n{} \nfor charge with id {}", googlePayAuthRequest.getPaymentInfo().toString(), chargeId);
+        return googlePayService.authorise(chargeId, googlePayAuthRequest);
+    }
+
+    @POST
+    @Path("/v1/frontend/charges/{chargeId}/wallets/google/worldpay")
+    @Consumes(APPLICATION_JSON)
+    @Produces(APPLICATION_JSON)
+    @Operation(
+            summary = "Authorise GooglePay payment for Worldpay",
+            responses = {
+                    @ApiResponse(responseCode = "200", description = "OK"),
+                    @ApiResponse(responseCode = "202", description = "Accepted - payment has been submitted for authorisation and awaiting response from Worldpay"),
+                    @ApiResponse(responseCode = "400", description = "Bad request - invalid payload or the payment has been declined",
+                            content = @Content(schema = @Schema(implementation = ErrorResponse.class))),
+                    @ApiResponse(responseCode = "402", description = "Gateway error",
+                            content = @Content(schema = @Schema(implementation = ErrorResponse.class))),
+                    @ApiResponse(responseCode = "422", description = "Unprocessable Entity - Invalid payload or missing mandatory attributes",
+                            content = @Content(schema = @Schema(implementation = ErrorResponse.class))),
+                    @ApiResponse(responseCode = "404", description = "Not found"),
+                    @ApiResponse(responseCode = "500", description = "Internal server error"),
+            }
+    )
+    public Response authoriseChargeGooglePayWorldpay(@Parameter(example = "b02b63b370fd35418ad66b0101", description = "Charge external ID")
                                     @PathParam("chargeId") String chargeId,
                                     @NotNull @Valid GooglePayAuthRequest googlePayAuthRequest) {
         logger.info("Received encrypted payload for charge with id {} ", chargeId);
